<resources>
    <string name="app_name">Page</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="sign_in_with_google">Sign in with Google</string>
    <string name="search_centers">Search by name, district, or mandal</string>
    <string name="anganwadi_centers">Anganwadi Centers</string>
    <string name="menu">Menu</string>
    <string name="close_button">Close</string>
    <string name="inactive_center_serial_number">S.No.</string>
    <string name="anganwadi_center_name">Center Name</string>
    <string name="no_reason_provided">No reason provided</string>
    <string name="view_button">View</string>
    <string name="restore">Restore</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="activity_icon">Activity icon</string>
    <string name="profile">Profile</string>
    <string name="admin">Admin</string>
    <string name="admin_email_hint">admin@example.com</string>
    <string name="admin_phone_hint">9000000001</string>
    <string name="logout">Logout</string>
    <string name="reset_password">Reset Password</string>
    <string name="camera_button">Camera</string>
    <string name="edit_icon">Edit</string>
    <string name="app_title">ARUNACHAL PRADESH ANGANWADI</string>
    <string name="selection_prompt">To continue, select user type</string>
    <string name="i_am_an">I am an</string>
    <string name="anganwadi_worker">Anganwadi Worker</string>
    <string name="i_am_a">I am a</string>
    <string name="supervisor_cdpo_dpo">Supervisor • CDPO • DPO</string>
    <string name="beneficiary">Beneficiary</string>
</resources>